--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -86,7 +86,7 @@ jobs:
 
   test_stack:
     runs-on: ubuntu-latest
-    timeout-minutes: 40
+    timeout-minutes: 50
     steps:
       - uses: actions/checkout@v2
       - name: Set up python 3.8
@@ -102,13 +102,16 @@ jobs:
       - name: build docker
         run: bin/retry_cmd bin/build_docker
       - name: setup stack
-        run: bin/setup_stack local dhcp
+        run: bin/setup_stack local dhcp dumptcp
       - name: run test
         run: bin/run_test_set stack
+      - name: post-run logs
+        if: ${{ always() }}
+        run: bin/dump_logs full
 
   test_scale:
     runs-on: ubuntu-20.04
-    timeout-minutes: 25
+    timeout-minutes: 30
     steps:
       - uses: actions/checkout@v2
       - name: Set up python 3.8
@@ -125,4 +128,4 @@ jobs:
         run: testing/python_test test_failscale
       - name: post-run logs
         if: ${{ always() }}
-        run: bin/dump_logs
+        run: bin/dump_logs full
