ACL changes for DHCP reflection

--- a/topo/bond/faucet_br/faucet.yaml
+++ b/topo/bond/faucet_br/faucet.yaml
@@ -8,6 +8,10 @@ dps:
       1:
         description: data0
         tagged_vlans: [272, 171]
+        acls_in: [dhcp_request, dhcp_response]
+      0xfffffff8:
+        description: "OFPP_IN_PORT"
+        output_only: True
 version: 2
 vlans:
   300:
@@ -21,6 +25,17 @@ acls:
       udp_dst: 67
       vlan_vid: 272
       actions:
-        output:
-            port: 0xfffffff8     # OFPP_IN_PORT
+          output:
             swap_vid: 171
+            port: 0xfffffff8
+  dhcp_response:
+    - rule:
+      dl_type: 0x800
+      nw_proto: 17
+      udp_src: 67
+      udp_dst: 68
+      vlan_vid: 171
+      actions:
+          output:
+            swap_vid: 272
+            port: 0xfffffff8
