--- a/topo/bond/faucet/faucet.yaml
+++ b/topo/bond/faucet/faucet.yaml
@@ -9,7 +9,7 @@ dps:
     interfaces:
       4:
         description: trunk
-        tagged_vlans: [272]
+        tagged_vlans: [171, 272]
       6:
         description: "to t1sw2 port 6"
         stack: {dp: nz-kiwi-t1sw2, port: 6}
@@ -58,7 +58,7 @@ dps:
     hardware: Generic
     lacp_timeout: 5
     interfaces:
-      1: {description: IoT Device, native_vlan: 171, acl_in: uniform_acl, max_hosts: 1}
+      1: {description: IoT Device, native_vlan: 272, acl_in: uniform_acl, max_hosts: 1}
       2: {description: IoT Device, native_vlan: 171, acl_in: uniform_acl, max_hosts: 1}
       3: {description: IoT Device, native_vlan: 171, acl_in: uniform_acl, max_hosts: 1}
       4: {description: IoT Device, native_vlan: 171, acl_in: uniform_acl, max_hosts: 1}
