--- a/topo/bond/faucet/faucet.yaml
+++ b/topo/bond/faucet/faucet.yaml
@@ -9,7 +9,7 @@ dps:
     interfaces:
       4:
         description: trunk
-        tagged_vlans: [272]
+        tagged_vlans: [171, 272]
       6:
         description: "to t1sw2 port 6"
         stack: {dp: nz-kiwi-t1sw2, port: 6}
