--- a/etc/Dockerfile.controller
+++ b/etc/Dockerfile.controller
@@ -2,7 +2,7 @@
 
 FROM faucet/python3:5.0.1
 
-RUN apk add -q tcpdump iptables sudo linux-headers openvswitch libstdc++
+RUN apk add -q tcpdump iptables sudo linux-headers openvswitch libstdc++ coreutils
 
 COPY faucet/ /faucet-src/
 RUN /faucet-src/docker/install-faucet.sh && rm -rf /faucet-src/.git
