--- a/etc/Dockerfile.controller
+++ b/etc/Dockerfile.controller
@@ -16,9 +16,13 @@ RUN mv /usr/sbin/tcpdump /usr/bin/tcpdump
 
 WORKDIR /root
 COPY bin/retry_cmd bin/
+# Fake build running on CI while to avoid using venv during DAQ install.
+ENV CI=true
 
 RUN $AG update && $AG install ash iptables sudo openvswitch-switch openvswitch-common \
-    python3-pip
+    python3 python3-pip python3.8 python3.8-venv python3.8-dev
+
+RUN update-alternatives --install /usr/bin/python3 python /usr/bin/python3.8 2
 
 COPY misc/ bin/
 
