--- a/controller/bin/daq_config.yaml
+++ b/controller/bin/daq_config.yaml
@@ -4,13 +4,11 @@ include: config/system/default.yaml
 
 switch_setup:
   of_dpid: 0xfa
-  data_intf: alt-intf
-  alt_port: 6669
-  uplink_port: 100
-  ext_br: alt-switch
+  data_intf: data0
+  alt_port: 3984
   model: EXT_STACK
 
 run_trigger:
-  vlan_start: 2000
-  vlan_end: 2010
+  vlan_start: 272
+  vlan_end: 276
   egress_vlan: 171
