--- a/etc/Dockerfile.controller
+++ b/etc/Dockerfile.controller
@@ -24,7 +24,7 @@ RUN $AG update && $AG install ash iptables sudo openvswitch-switch openvswitch-c
 
 RUN update-alternatives --install /usr/bin/python3 python /usr/bin/python3.8 2
 
-COPY misc/ bin/
+COPY controller/bin/ bin/
 
 COPY faucet/ faucet/
 RUN bin/install_faucet && rm -rf faucet/.git
