--- a/etc/Dockerfile.faucet
+++ b/etc/Dockerfile.faucet
@@ -10,6 +10,6 @@ RUN /faucet-src/docker/install-faucet.sh && rm -rf /faucet-src/.git
 # Check for target executable since installer doesn't error out properly.
 RUN which faucet
 
-COPY misc/faucet_go bin/
+COPY controller/bin/faucet_go bin/
 
 CMD ["bin/faucet_go"]
