--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -65,9 +65,9 @@ jobs:
       - name: run python tests
         run: testing/python_test test_fot
       - name: setup stack
-        run: bin/setup_stack fot
+        run: bin/setup_stack skip-conn-check fot
       - name: run integration tests
-        run: testing/test_fot
+        run: bin/run_test_set fot
       - name: post-run logs
         if: ${{ always() }}
         run: |
