--- a/topo/single-t1/faucet/faucet.yaml
+++ b/topo/single-t1/faucet/faucet.yaml
@@ -20,6 +20,7 @@ dps:
         stack: {dp: nz-kiwi-t2sw3, port: 50}
       28:
         description: egress
+        lacp: 3
         tagged_vlans: [171]
     lldp_beacon: {max_per_interval: 5, send_interval: 5}
   nz-kiwi-t2sw1:
