--- a/topo/flat/one/faucet/gauge.yaml
+++ b/topo/flat/one/faucet/gauge.yaml
@@ -4,11 +4,11 @@ faucet_configs: [/etc/faucet/faucet.yaml]
 watchers:
   flow_table:
     db: prometheus
-    dps: [sw1, sw2, sw3]
+    dps: [sw1]
     interval: 10
     type: flow_table
   port_stats:
     db: prometheus
-    dps: [sw1, sw2, sw3]
+    dps: [sw1]
     interval: 10
     type: port_stats
