--- a/topo/fot/forch/forch.yaml
+++ b/topo/fot/forch/forch.yaml
@@ -7,13 +7,24 @@ site:
     nz-kiwi-ctl1:
       fqdn: localhost.n
       port: 9020
+orchestration:
+  structural_config_file: faucet.yaml
+  unauthenticated_vlan: 100
+  static_device_behavior: behaviors.yaml
+  gauge_config_file: gauge.yaml
+  segments_vlans_file: segments-to-vlans.yaml
+  sequester_config:
+    segment: FOT
+    vlan_start: 272
+    vlan_end: 276
+    port_description: tap
 proxy_server:
   targets:
-    faucet: 
+    faucet:
       port: 8001
-    forch: 
+    forch:
       port: 8302
-    gauge: 
+    gauge:
       port: 9001
 process:
   scan_interval_sec: 10
