--- a/etc/Dockerfile.faucet
+++ b/etc/Dockerfile.faucet
@@ -2,7 +2,7 @@
 
 FROM faucet/python3:5.0.1
 
-RUN apk add -q tcpdump iptables sudo linux-headers
+RUN apk add -q tcpdump iptables sudo linux-headers build-base
 
 COPY faucet/ /faucet-src/
 RUN /faucet-src/docker/install-faucet.sh && rm -rf /faucet-src/.git
