--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -65,11 +65,11 @@ jobs:
       - name: run python tests
         run: testing/python_test test_fot
       - name: setup stack
-        run: bin/setup_stack skip-conn-check dhcp http fot vxlan
+        run: bin/setup_stack skip-conn-check dhcp fot vxlan
       - name: run integration tests
         run: bin/run_test_set fot
       - name: setup stack
-        run: bin/setup_stack skip-conn-check dhcp http fot
+        run: bin/setup_stack skip-conn-check dhcp fot
       - name: run integration tests
         run: bin/run_test_set fot
       - name: post-run logs
