--- a/controller/bin/daq_config.yaml
+++ b/controller/bin/daq_config.yaml
@@ -1,6 +1,6 @@
 # DAQ FOT configuration.
 
-include: /root/daq/config/system/default.yaml
+include: ../daq/config/system/default.yaml
 
 switch_setup:
   data_intf: data0
