--- a/topo/counting/forch/forch.yaml
+++ b/topo/counting/forch/forch.yaml
@@ -14,6 +14,7 @@ orchestration:
   static_device_placement: placement.yaml
   static_device_behavior: behaviors.yaml
   segments_vlans_file: segments-to-vlans.yaml
+  tail_acl: tail_acl
 proxy_server:
   targets:
     faucet:
