--- a/topo/solo/forch/forch.yaml
+++ b/topo/solo/forch/forch.yaml
@@ -13,6 +13,7 @@ orchestration:
   static_device_placement: example_placement.yaml
   static_device_behavior: example_behavior.yaml
   segments_vlans_file: example_segments-to-vlans.yaml
+  tail_acl: tail_acl
   auth_config:
     radius_info:
       server_ip: 172.17.0.5
