--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -57,6 +57,8 @@ jobs:
       - name: setup base
         run: bin/setup_base
       - name: setup faucet and daq
+        env:
+          GIT_URL: ${{ secrets.GIT_URL }}
         run: |
           bin/setup_remote faucet
           bin/setup_remote daq
