--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -67,17 +67,20 @@ jobs:
       - name: run python tests
         run: testing/python_test test_fot
       - name: setup stack
-        run: bin/setup_stack skip-conn-check dhcp fot
+        run: bin/setup_stack skip-conn-check dhcp no-test fot
       - name: run integration tests
         run: bin/run_test_set fot
       - name: setup stack
-        run: bin/setup_stack skip-conn-check dhcp fot vxlan
+        run: bin/setup_stack skip-conn-check dhcp no-test fot vxlan
       - name: run integration tests
         run: bin/run_test_set fot
       - name: post-run logs
         if: ${{ always() }}
         run: |
+          echo %%%%%%%%%%%%% Controller startup logs
           docker logs forch-controller-1
+          echo %%%%%%%%%%%%% DAQ startup logs
+          cat inst/forch-controller-1/daq/inst/cmdrun.log
 
   test_reconfig:
     runs-on: ubuntu-latest
