--- a/controller/bin/daq_config.yaml
+++ b/controller/bin/daq_config.yaml
@@ -1,11 +1,13 @@
 # DAQ FOT configuration.
 
-include: ../daq/config/system/default.yaml
+include: ${DAQ_LIB}/config/system/default.yaml
 
 switch_setup:
   data_intf: data0
   lo_port: 3984
+  varz_port: 5678
   model: EXT_STACK
+  native: True
 
 run_trigger:
   vlan_start: 272
