--- a/controller/bin/daq_config.yaml
+++ b/controller/bin/daq_config.yaml
@@ -2,6 +2,8 @@
 
 include: ${DAQ_LIB}/config/system/default.yaml
 
+base_conf: ${DAQ_LIB}/resources/setups/orchestration/base_config.json
+
 switch_setup:
   data_intf: data0
   lo_port: 3984
