address pr comments

--- a/etc/Dockerfile.controller
+++ b/etc/Dockerfile.controller
@@ -36,7 +36,8 @@ RUN bin/install_forch && rm -rf forch/.git
 COPY daq/ daq/
 RUN daq/bin/setup_dev simple && rm -rf daq/.git
 
-COPY controller/daq_site_config /site
+COPY controller/site_config /site
+
 # Don't copy this earlier to optimize build.
 COPY controller/bin bin/
 
