Adding device with sequestering timeout

--- a/topo/fot/forch/forch.yaml
+++ b/topo/fot/forch/forch.yaml
@@ -18,6 +18,7 @@ orchestration:
     vlan_start: 272
     vlan_end: 276
     port_description: TAP
+    sequester_timeout_sec: 360
 proxy_server:
   targets:
     faucet:
