--- a/controller/site_config/mac_addrs/9a02571e8f03/device_config.json
+++ b/controller/site_config/mac_addrs/9a02571e8f03/device_config.json
@@ -1,3 +1,8 @@
 {
-    "static_ip": "192.168.1.3"
+    "static_ip": "192.168.1.3",
+    "modules": {
+        "hold": {
+            "enabled": true
+        }
+    }
 }
