Adding incremental enable

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -67,7 +67,7 @@ jobs:
       - name: run python tests
         run: testing/python_test test_fot
       - name: setup stack
-        run: bin/setup_stack skip-conn-check dhcp fot
+        run: bin/setup_stack devices 4 skip-conn-check dhcp fot
       - name: run integration tests
         run: bin/run_test_set fot
       - name: setup stack
