--- a/topo/fot/forch/forch.yaml
+++ b/topo/fot/forch/forch.yaml
@@ -19,7 +19,7 @@ orchestration:
     vlan_end: 276
     port_description: TAP
     sequester_timeout_sec: 360
-    default_auto_sequestering: false
+    default_auto_sequestering: disabled
 proxy_server:
   targets:
     faucet:
