--- a/controller/bin/daq_config.yaml
+++ b/controller/bin/daq_config.yaml
@@ -10,6 +10,7 @@ switch_setup:
   varz_port: 5678
   model: EXT_STACK
   native: True
+  of_dpid: '0'
 
 run_trigger:
   vlan_start: 272
@@ -17,7 +18,6 @@ run_trigger:
 
 device_reporting:
   server_port: 50051
-  server_address: 127.0.0.1
 
 external_subnets:
   - subnet: 192.168.1.0/24
