--- a/topo/fot/forch/behaviors.yaml
+++ b/topo/fot/forch/behaviors.yaml
@@ -10,3 +10,6 @@ device_mac_behaviors:
     auto_sequestering: enabled
   "9a:02:57:1e:8f:04":
     segment: INFRA
+  "9a:02:57:1e:8f:05":
+    segment: INFRA
+    auto_sequestering: enabled
