--- a/topo/fot/forch/faucet.yaml
+++ b/topo/fot/forch/faucet.yaml
@@ -35,6 +35,9 @@ dps:
     stack:
       priority: 1
     interfaces:
+      4:
+        description: TAP
+        tagged_vlans: [171]
       6:
         description: "to t1sw1 port 6"
         stack: {dp: nz-kiwi-t1sw1, port: 6}
@@ -62,6 +65,7 @@ dps:
       2: {description: IoT Device, max_hosts: 1}
       3: {description: IoT Device, max_hosts: 1}
       4: {description: IoT Device, max_hosts: 1}
+      5: {description: IoT Device, max_hosts: 1}
       50:
         description: "to t1sw1 port 9"
         stack: {dp: nz-kiwi-t1sw1, port: 9}
