--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -79,7 +79,7 @@ jobs:
         run: |
           echo %%%%%%%%%%%%% Controller startup logs
           docker logs forch-controller-1
-          echo %%%%%%%%%%%%% DAQ startup logs
+          echo %%%%%%%%%%%%% DAQ logs
           cat inst/forch-controller-1/daq/inst/cmdrun.log
           echo %%%%%%%%%%%%% Forch logs
           cat inst/forch-controller-1/forch.log
