Run 10 matrix jobs

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,97 +7,12 @@ on:
     - cron: '0 * * * *'
 
 jobs:
-  test_fot1:
+  test_fot:
     runs-on: ubuntu-latest
     timeout-minutes: 60
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up python 3.8
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
-      - name: setup base
-        run: bin/setup_base
-      - name: setup faucet and daq
-        env:
-          GIT_URL: ${{ secrets.GIT_URL }}
-        run: |
-          bin/setup_remote faucet
-          bin/setup_remote daq
-      - name: build docker
-        run: bin/retry_cmd bin/build_docker controller
-      - name: run python tests
-        run: testing/python_test test_fot
-      - name: setup vxlan stack
-        run: bin/setup_stack devices 5 skip-conn-check dhcp fot vxlan
-      - name: run vxlan integration tests
-        run: timeout 20m bin/run_test_set fot
-      - name: setup stack
-        run: bin/setup_stack devices 5 skip-conn-check dhcp fot
-      - name: run integration tests
-        run: timeout 20m bin/run_test_set fot
-      - name: post-run logs
-        if: ${{ always() }}
-        run: |
-          echo %%%%%%%%%%%%% Controller startup logs
-          docker logs forch-controller-1
-          echo %%%%%%%%%%%%% DAQ logs
-          cat inst/forch-controller-1/daq/inst/cmdrun.log
-          echo %%%%%%%%%%%%% Module logs
-          more ./inst/forch-controller-1/daq/inst/run-*/nodes/nmap*/activate.log | cat
-          echo %%%%%%%%%%%%% Forch logs
-          cat inst/forch-controller-1/forch.log
-          echo %%%%%%%%%%%%% vxlan raw
-          tcpdump -enr tcpdump/docker0.pcap | fgrep DHCP || true
-          echo %%%%%%%%%%%%% vxlan int
-          tcpdump -enr tcpdump/vxlan_sys_4789.pcap | fgrep DHCP || true
-  test_fot2:
-    runs-on: ubuntu-latest
-    timeout-minutes: 60
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up python 3.8
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
-      - name: setup base
-        run: bin/setup_base
-      - name: setup faucet and daq
-        env:
-          GIT_URL: ${{ secrets.GIT_URL }}
-        run: |
-          bin/setup_remote faucet
-          bin/setup_remote daq
-      - name: build docker
-        run: bin/retry_cmd bin/build_docker controller
-      - name: run python tests
-        run: testing/python_test test_fot
-      - name: setup vxlan stack
-        run: bin/setup_stack devices 5 skip-conn-check dhcp fot vxlan
-      - name: run vxlan integration tests
-        run: timeout 20m bin/run_test_set fot
-      - name: setup stack
-        run: bin/setup_stack devices 5 skip-conn-check dhcp fot
-      - name: run integration tests
-        run: timeout 20m bin/run_test_set fot
-      - name: post-run logs
-        if: ${{ always() }}
-        run: |
-          echo %%%%%%%%%%%%% Controller startup logs
-          docker logs forch-controller-1
-          echo %%%%%%%%%%%%% DAQ logs
-          cat inst/forch-controller-1/daq/inst/cmdrun.log
-          echo %%%%%%%%%%%%% Module logs
-          more ./inst/forch-controller-1/daq/inst/run-*/nodes/nmap*/activate.log | cat
-          echo %%%%%%%%%%%%% Forch logs
-          cat inst/forch-controller-1/forch.log
-          echo %%%%%%%%%%%%% vxlan raw
-          tcpdump -enr tcpdump/docker0.pcap | fgrep DHCP || true
-          echo %%%%%%%%%%%%% vxlan int
-          tcpdump -enr tcpdump/vxlan_sys_4789.pcap | fgrep DHCP || true
-  test_fot3:
-    runs-on: ubuntu-latest
-    timeout-minutes: 60
+    strategy:
+      matrix:
+        build: [a, b, c, d, e, f, g, h, i, j]
     steps:
       - uses: actions/checkout@v2
       - name: Set up python 3.8
