--- a/controller/bin/daq_config.yaml
+++ b/controller/bin/daq_config.yaml
@@ -4,6 +4,8 @@ include: ${DAQ_LIB}/config/system/default.yaml
 
 base_conf: ${DAQ_LIB}/resources/setups/orchestration/base_config.json
 
+mininet_loglevel: debug
+
 switch_setup:
   data_intf: data0
   lo_port: 3984
