Handle timeouts for DTS gRPC and add in testing w/ vxlan. (#311)

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -69,11 +69,11 @@ jobs:
       - name: setup stack
         run: bin/setup_stack devices 4 skip-conn-check dhcp fot
       - name: run integration tests
-        run: bin/run_test_set fot
+        run: timeout 20m bin/run_test_set fot
       - name: setup stack
         run: bin/setup_stack devices 4 skip-conn-check dhcp fot vxlan
       - name: run integration tests
-        run: bin/run_test_set fot
+        run: timeout 20m bin/run_test_set fot
       - name: post-run logs
         if: ${{ always() }}
         run: |
